[package]
name = "oss-bot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#slack-morphism = { path = "vendor/slack-morphism", features = ["axum"]
#slack-morphism = { git = "https://github.com/x3ro/slack-morphism-rust", branch = "oss-bot", features = ["axum"] }
slack-morphism = { version = "1.6.1", features = ["axum"] }

futures = "0.3.25"
chrono = "0.4.23"
url = "2.3.1"
tokio = { version = "1.24.2", features = ["full"] }
rsb_derive = "0.5.1"
tracing = "0.1.37"
tracing-subscriber = { version ="0.3", features = ["env-filter"] }
hyper = { version = "0.14.23", features = ["http2","server", "client", "h2"] }
hyper-rustls = "0.23.2"
http = "0.2.8"
axum = "0.6.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = "1.0.152"
serde_json = "1.0.91"
anyhow = { version = "1.0.68", features = ["backtrace"] }
lazy_static = "1.4.0"
rand = "0.8.5"
redis = { version = "0.22.3", features = ["tokio-comp"] }
